--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 :root {
 	--headerHeight: 15dvh;
 	--mainHeight: calc(100dvh - var(--headerHeight));
-	--gameSize: 30rem;
+	--gameSize: 29rem;
 	--rounding: 5px;
 
 	/* COlORS */
@@ -18,6 +18,11 @@
 	padding: 0;
 	box-sizing: border-box;
 	font-family: "Itim", cursive;
+}
+
+body {
+	overflow: hidden;
+
 }
 
 main section {
@@ -45,43 +50,12 @@ header nav {
 #page__1 {
 	background-color: var(--bg);
 	transform: translateY(-100%);
-}
+	transition: transform .3s ease-in-out;
 
-#game {
-	transform: translateY(-100%);
-	height: var(--mainHeight);
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	place-content: space-evenly;
-	place-items: center;
-}
-
-#game__grid {
-	width: var(--gameSize);
-	height: var(--gameSize);
-	margin: auto 0;
-	background-color: lightblue;
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-
-	gap: 1rem;
-	padding: 1rem;
-	border-radius: var(--rounding);
-}
-
-.game__child {
-	width: calc((var(--gameSize) - 5rem) / 4);
-	height: calc((var(--gameSize) - 5rem) / 4);
-	font-size: 5rem;
-	text-align: center;
-	background-color: lightcoral;
-	border-radius: var(--rounding);
-	/* transition: all 150ms ease-in-out; */
-	cursor: default;
-	user-select: none;
 }
 
 #selection {
+	height: inherit;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -100,6 +74,11 @@ header nav {
 	transition: all 0.1s;
 }
 
+#selection button:hover {
+	transform: translate(5px, 0);
+	box-shadow: 0px 5px 0px var(--btnShadow);
+}
+
 #selection button:active {
 	transform: translate(5px, 5px);
 	box-shadow: none;
@@ -115,14 +94,67 @@ header nav {
 	background-color: black;
 }
 
-#path {
-	stroke-dasharray: 2280.476806640625;
-	stroke-dashoffset: 2280.476806640625;
-	animation: draw 0.5s ease forwards;
+#game {
+	transform: translateY(-100%);
+	height: var(--mainHeight);
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	place-content: space-evenly;
+	place-items: center;
+	transition: transform .3s ease-in-out;
 }
 
-@keyframes draw {
-	to {
-		stroke-dashoffset: 0;
-	}
+#game__grid {
+	width: var(--gameSize);
+	height: var(--gameSize);
+	margin: auto 0;
+	background-color: lightblue;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	justify-content: center;
+	align-items: center;
+	gap: 1rem;
+	padding: 1rem;
+	border-radius: var(--rounding);
+}
+
+.game__child {
+	width: calc((var(--gameSize) - 5rem) / 3);
+	height: calc((var(--gameSize) - 5rem) / 3);
+	font-size: 5rem;
+	text-align: center;
+	background-color: lightcoral;
+	border-radius: var(--rounding);
+	/* transition: all 150ms ease-in-out; */
+	cursor: default;
+	user-select: none;
+}
+
+.visible {
+	visibility: visible;
+  opacity: 1;
+}
+
+#winner__tab {
+	height: var(--gameSize);
+	width: var(--gameSize);
+	background-color: brown;
+	border-radius: var(--rounding);
+	position: absolute;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding-bottom: 5rem;
+	transition: opacity 0.5s ease-in-out;
+  opacity: 0;
+}
+
+#winnner__name {
+	font-size: 5rem;
+	text-align: center;
+	color: var(--fg);
+}
+
+#winnner__name span {
+	font-size: 7rem;
 }
