--- a/styles.css
+++ b/styles.css
@@ -1,109 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Itim&display=swap");
 
-:root {
-	--headerHeight: 15dvh;
-	--mainHeight: calc(100dvh - var(--headerHeight));
-	--gameSize: 29rem;
-	--rounding: 5px;
-
-	/* COlORS */
-	--bg: #4a4a4a;
-	--fg: #fff;
-	--btn: #ff4151;
-	--btnShadow: red;
-}
-
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	font-family: "Itim", cursive;
-}
-
-body {
-	overflow: hidden;
-
-}
-
-main section {
-	height: var(--mainHeight);
-}
-
-header {
-	height: var(--headerHeight);
-}
-
-header nav {
-	height: var(--headerHeight);
-	font-size: 2rem;
-	font-family: Ubuntu;
-	position: fixed;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 100vw;
-	z-index: 2;
-	background-color: rgb(47, 79, 79);
-	color: #fff;
-}
-
-#page__1 {
-	background-color: var(--bg);
-	transform: translateY(-100%);
-	transition: transform .3s ease-in-out;
-
-}
-
-#selection {
-	height: inherit;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-#selection button {
-	width: 100px;
-	height: 60px;
-	border: none;
-	outline: none;
-	background-color: var(--btn);
-	border-radius: var(--rounding);
-	margin: 1rem;
-	cursor: pointer;
-	box-shadow: 5px 5px 0px var(--btnShadow);
-	transition: all 0.1s;
-}
-
-#selection button:hover {
-	transform: translate(5px, 0);
-	box-shadow: 0px 5px 0px var(--btnShadow);
-}
-
-#selection button:active {
-	transform: translate(5px, 5px);
-	box-shadow: none;
-}
-
-#selection button:focus-visible {
-	outline: 1px solid black;
-}
-
-#selection .divider {
-	width: 1px;
-	height: 100px;
-	background-color: black;
-}
-
-#game {
-	transform: translateY(-100%);
-	height: var(--mainHeight);
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	place-content: space-evenly;
-	place-items: center;
-	transition: transform .3s ease-in-out;
-}
-
 #game__grid {
 	width: var(--gameSize);
 	height: var(--gameSize);
@@ -118,43 +14,6 @@ header nav {
 	border-radius: var(--rounding);
 }
 
-.game__child {
-	width: calc((var(--gameSize) - 5rem) / 3);
-	height: calc((var(--gameSize) - 5rem) / 3);
-	font-size: 5rem;
-	text-align: center;
-	background-color: lightcoral;
-	border-radius: var(--rounding);
-	/* transition: all 150ms ease-in-out; */
-	cursor: default;
-	user-select: none;
-}
-
-.visible {
-	visibility: visible;
-  opacity: 1;
-}
-
-#winner__tab {
-	height: var(--gameSize);
-	width: var(--gameSize);
-	background-color: brown;
-	border-radius: var(--rounding);
-	position: absolute;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	padding-bottom: 5rem;
-	transition: opacity 0.5s ease-in-out;
-  opacity: 0;
-}
-
-#winnner__name {
-	font-size: 5rem;
-	text-align: center;
-	color: var(--fg);
-}
-
-#winnner__name span {
-	font-size: 7rem;
+#game__grid div {
+	background-color: red;
 }
