--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Itim&display=swap");
 
+
+body {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+#game {
+	transform: translateY(-100%);
+	height: var(--mainHeight);
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	place-content: space-evenly;
+	place-items: center;
+	transition: transform .3s ease-in-out;
+}
+
 #game__grid {
 	width: var(--gameSize);
 	height: var(--gameSize);
@@ -14,6 +31,14 @@
 	border-radius: var(--rounding);
 }
 
-#game__grid div {
-	background-color: red;
+.game__child {
+	width: calc((var(--gameSize) - 5rem) / 3);
+	height: calc((var(--gameSize) - 5rem) / 3);
+	font-size: 5rem;
+	text-align: center;
+	background-color: lightcoral;
+	border-radius: var(--rounding);
+	/* transition: all 150ms ease-in-out; */
+	cursor: default;
+	user-select: none;
 }
