--- a/styles.css
+++ b/styles.css
@@ -1,44 +1,54 @@
 @import url("https://fonts.googleapis.com/css2?family=Itim&display=swap");
 
+:root {
+	--mainHeight: calc(100dvh);
+	--gameSize: 27rem;
+	--rounding: 5px;
 
-body {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	/* COlORS */
+	--bg: #4a4a4a;
+	--fg: #fff;
+	--btn: #ff4151;
+	--btnShadow: red;
 }
 
-#game {
-	transform: translateY(-100%);
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	/* font-family: "Itim", cursive; */
+}
+
+main {
 	height: var(--mainHeight);
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	place-content: space-evenly;
-	place-items: center;
-	transition: transform .3s ease-in-out;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: black;
 }
+
 
 #game__grid {
 	width: var(--gameSize);
 	height: var(--gameSize);
-	margin: auto 0;
-	background-color: lightblue;
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
-	justify-content: center;
-	align-items: center;
-	gap: 1rem;
-	padding: 1rem;
-	border-radius: var(--rounding);
+	align-content: space-evenly;
+	justify-items: center;
+	box-shadow: inset 0 0 0 2px black ;
+	background-color: white;
+
 }
 
 .game__child {
-	width: calc((var(--gameSize) - 5rem) / 3);
-	height: calc((var(--gameSize) - 5rem) / 3);
+	display: flex;
+	width: calc((var(--gameSize) - .5rem) / 3);
+	height: calc((var(--gameSize) - .5rem) / 3);
 	font-size: 5rem;
-	text-align: center;
-	background-color: lightcoral;
-	border-radius: var(--rounding);
-	/* transition: all 150ms ease-in-out; */
 	cursor: default;
 	user-select: none;
+	background-color: black;
+	color: white;
+	align-items: center;
+	justify-content: center;
 }
