--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,8 @@ body {
 	background-color: black;
 }
 
-main, footer {
+main,
+footer {
 	color: gray;
 	display: flex;
 	column-gap: 2rem;
@@ -39,15 +40,14 @@ main, footer {
 	grid-template-columns: repeat(3, 1fr);
 	align-content: space-evenly;
 	justify-items: center;
-	box-shadow: inset 0 0 0 2px black ;
+	box-shadow: inset 0 0 0 2px black;
 	background-color: white;
-
 }
 
 .game__child {
 	display: flex;
-	width: calc((var(--gameSize) - .5rem) / 3);
-	height: calc((var(--gameSize) - .5rem) / 3);
+	width: calc((var(--gameSize) - 0.5rem) / 3);
+	height: calc((var(--gameSize) - 0.5rem) / 3);
 	font-size: 5rem;
 	cursor: default;
 	user-select: none;
@@ -66,14 +66,11 @@ footer div:hover {
 	color: white;
 }
 
-
-
 @media (min-width: 768px) {
 	:root {
-	--gameSize: 33rem;
+		--gameSize: 33rem;
 	}
 }
-
 
 /* javascript classes */
 
@@ -87,4 +84,20 @@ footer div:hover {
 
 .hidden {
 	visibility: hidden;
+}
+
+.blink {
+	animation: blink-anim 1s;
+}
+
+@keyframes blink-anim {
+	0%,
+	50%,
+	100% {
+		color: white;
+	}
+	25%,
+	75% {
+		color: gray;
+	}
 }
